Full MCR J16 support (but not in generators yet)